fix: remove columns border on mobile

--- a/src/styles/_columns.scss
+++ b/src/styles/_columns.scss
@@ -126,13 +126,8 @@
             overflow-y: auto;
             border-radius: 0;
             border: 0;
-            border-right: 1px solid var(--colorBorder);
             scroll-snap-align: start;
             scroll-snap-stop: always;
-        }
-
-        &__item:last-child {
-            border-right: 0;
         }
 
         &__empty {
